# Arch7z-Installer

./: CMakeLists.txt  README.md  cmake_install.cmake  debug_fstab.sh  resources.qrc  test_locale_format  test_locale_format.cpp  test_timezone  test_timezone.cpp
arch7z-installer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
arch7z-installer_autogen/UVLADIE3JM/: moc_advancedpartition.cpp  moc_advancedpartition.cpp.d  moc_diskselection.cpp  moc_diskselection.cpp.d  moc_installer.cpp  moc_installer.cpp.d  moc_installprogress.cpp  moc_installprogress.cpp.d  moc_installtype.cpp  moc_installtype.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_partitionlayout.cpp  moc_partitionlayout.cpp.d  moc_userconfig.cpp  moc_userconfig.cpp.d  moc_vminstaller.cpp  moc_vminstaller.cpp.d  moc_vmpartitionlayout.cpp  moc_vmpartitionlayout.cpp.d
src/: advancedpartition.cpp  advancedpartition.h  diskselection.cpp  diskselection.h  installconfig.h  installer.cpp  installer.h  installprogress.cpp  installprogress.h  installtype.cpp  installtype.h  locale.cpp  locale.h  main.cpp  mainwindow.cpp  mainwindow.h  partitionlayout.cpp  partitionlayout.h  settingsparser.cpp  settingsparser.h  userconfig.cpp  userconfig.h  vmdetection.cpp  vmdetection.h  vminstaller.cpp  vminstaller.h  vmpartitionlayout.cpp  vmpartitionlayout.h
src/settings-model/: final-settings.conf
